force-app/main/default/objects/GL_Feeder__c/GL_Feeder__c.object-meta.xml
<CustomObject>
    <description>GL Feeder</description>
    <label>GL Feeder</label>
    <nameField>
        <displayFormat>GL-{000000000}</displayFormat>
        <label>Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GL Feeders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>