force-app/main/default/objects/GL_Feeder__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>GL Feeders</relationshipLabel>
    <relationshipName>GL_Feeders</relationshipName>
    <type>Lookup</type>
</CustomField>