force-app/main/default/objects/GL_Feeder__c/fields/ACTG_AMT__c.field-meta.xml
<CustomField>
    <fullName>ACTG_AMT__c</fullName>
    <label>ACTG AMT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>