force-app/main/default/objects/GL_Feeder__c/fields/ACTVY_CD__c.field-meta.xml
<CustomField>
    <fullName>ACTVY_CD__c</fullName>
    <label>ACTVY CD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>