force-app/main/default/objects/GL_Feeder__c/fields/ASSET_TYPE__c.field-meta.xml
<CustomField>
    <fullName>ASSET_TYPE__c</fullName>
    <label>ASSET TYPE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>