force-app/main/default/objects/GL_Feeder__c/fields/Batch_Num__c.field-meta.xml
<CustomField>
    <fullName>Batch_Num__c</fullName>
    <formula>Session__r.Batch_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Batch Num</label>
    <type>Text</type>
</CustomField>