force-app/main/default/objects/GL_Feeder__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up to the Contact</description>
    <label>Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>GL Feeders</relationshipLabel>
    <relationshipName>GL_Feeders</relationshipName>
    <type>Lookup</type>
</CustomField>