force-app/main/default/objects/GL_Feeder__c/fields/FUND_ACCT__c.field-meta.xml
<CustomField>
    <fullName>FUND_ACCT__c</fullName>
    <description>Fund account on designation obj</description>
    <label>FUND ACCT</label>
    <length>50</length>
    <type>Text</type>
</CustomField>