force-app/main/default/objects/GL_Feeder__c/fields/Fund_Group__c.field-meta.xml
<CustomField>
    <fullName>Fund_Group__c</fullName>
    <label>Fund Group</label>
    <length>50</length>
    <type>Text</type>
</CustomField>