force-app/main/default/objects/GL_Feeder__c/fields/Fund_Group_Code__c.field-meta.xml
<CustomField>
    <fullName>Fund_Group_Code__c</fullName>
    <formula>CASE( Fund_Group__c ,  &apos;Unrestricted&apos;,&apos;1&apos;, 
                       &apos;Expendable/Demand&apos;,&apos;2&apos;,
                       &apos;Endowment&apos;,&apos;3&apos;,
                       &apos;Trust&apos;,&apos;4&apos;,
                       &apos;Administrative Investments&apos;,&apos;5&apos;,
                       &apos;Alumni Association&apos;,&apos;6&apos;,
                       &apos;Gift Annuity&apos;,&apos;7&apos;,
                       &apos;Unkonwn&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fund Group Code</label>
    <type>Text</type>
</CustomField>