force-app/main/default/objects/GL_Feeder__c/fields/FUND_OPEN_DATEDB__c.field-meta.xml
<CustomField>
    <fullName>FUND_OPEN_DATEDB__c</fullName>
    <label>FUND OPEN DATEDB</label>
    <type>Date</type>
</CustomField>