force-app/main/default/objects/GL_Feeder__c/fields/Fund_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Fund_Purpose__c</fullName>
    <label>Fund Purpose</label>
    <length>50</length>
    <type>Text</type>
</CustomField>