force-app/main/default/objects/GL_Feeder__c/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <label>Donor ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>