force-app/main/default/objects/GL_Feeder__c/fields/INCM_ATTRB__c.field-meta.xml
<CustomField>
    <fullName>INCM_ATTRB__c</fullName>
    <label>INCM ATTRB</label>
    <length>10</length>
    <type>Text</type>
</CustomField>