force-app/main/default/objects/GL_Feeder__c/fields/INCM_TYPE__c.field-meta.xml
<CustomField>
    <fullName>INCM_TYPE__c</fullName>
    <label>INCM TYPE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>