force-app/main/default/objects/GL_Feeder__c/fields/Is_Catch_Up__c.field-meta.xml
<CustomField>
    <fullName>Is_Catch_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this Feeder is a catch up feeder as GL Job was inactive, not a new one</description>
    <inlineHelpText>Indicates that this Feeder is a catch up feeder as GL Job was inactive, not a new one</inlineHelpText>
    <label>Is Catch Up</label>
    <type>Checkbox</type>
</CustomField>