force-app/main/default/objects/GL_Feeder__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pledge/Gift</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>GL Feeders</relationshipLabel>
    <relationshipName>GL_Feeders</relationshipName>
    <type>Lookup</type>
</CustomField>