force-app/main/default/objects/GL_Feeder__c/fields/Opportunity_Credit_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Credit_Date_Formula__c</fullName>
    <formula>Opportunity__r.ucinn_ascendv2__Credit_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Credit Date Formula</label>
    <type>Date</type>
</CustomField>