force-app/main/default/objects/GL_Feeder__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up to the payment that used for generating this Feeder</description>
    <label>Payment</label>
    <referenceTo>ucinn_ascendv2__Payment__c</referenceTo>
    <relationshipLabel>GL Feeders</relationshipLabel>
    <relationshipName>GL_Feeders</relationshipName>
    <type>Lookup</type>
</CustomField>