force-app/main/default/objects/GL_Feeder__c/fields/Pledge_Gift_Name__c.field-meta.xml
<CustomField>
    <fullName>Pledge_Gift_Name__c</fullName>
    <label>Pledge/Gift Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>