force-app/main/default/objects/GL_Feeder__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up to the session</description>
    <label>Session</label>
    <referenceTo>ucinn_ascendv2__Session__c</referenceTo>
    <relationshipLabel>GL Feeders</relationshipLabel>
    <relationshipName>GL_Feeders</relationshipName>
    <type>Lookup</type>
</CustomField>