force-app/main/default/objects/GL_Feeder__c/fields/TRAN_BTCH__c.field-meta.xml
<CustomField>
    <fullName>TRAN_BTCH__c</fullName>
    <description>Session Name</description>
    <label>TRAN BTCH</label>
    <length>50</length>
    <type>Text</type>
</CustomField>