force-app/main/default/objects/GL_Feeder__c/listViews/My_View.listView-meta.xml
<ListView>
    <fullName>My_View</fullName>
    <columns>NAME</columns>
    <columns>Session__c</columns>
    <columns>ACTG_AMT__c</columns>
    <columns>FUND_ACCT__c</columns>
    <columns>APPR_DATEDB__c</columns>
    <columns>Debit_Credit__c</columns>
    <columns>Opportunity__c</columns>
    <columns>ACTVY_CD__c</columns>
    <columns>ID__c</columns>
    <columns>TRAN_BTCH__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>INCM_TYPE__c</columns>
    <columns>INCM_ATTRB__c</columns>
    <columns>ASSET_TYPE__c</columns>
    <columns>Payment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>APPR_DATEDB__c</field>
        <operation>equals</operation>
        <value>10/13/2023</value>
    </filters>
    <filters>
        <field>Opportunity__c</field>
        <operation>contains</operation>
        <value>GN11049637,MN11049639</value>
    </filters>
    <label>My View</label>
</ListView>